<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_libras"
        android:icon="@drawable/ic_libras"
        android:title="@string/action_libras"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_welcome"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_welcome"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_legal"
        android:title="@string/action_legal"
        app:showAsAction="never" />

</menu>